--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-1-ambiente-de-desenvolvimento/gerador-de-senhas-seguras/package.json
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-1-ambiente-de-desenvolvimento/gerador-de-senhas-seguras/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "clipboard-copy": "^4.0.1",
     "eslint-config-trybe-frontend": "^1.7.0",
     "nanoid": "^4.0.0",
     "vite": "^4.1.1"
