--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-1-ambiente-de-desenvolvimento/field-validator/package.json
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-1-ambiente-de-desenvolvimento/field-validator/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@trybe/eslint-config-frontend": "^1.7.1",
     "validator": "^13.9.0",
     "vite": "^4.1.1"
   },
-"type": "module"
+  "type": "module",
+  "devDependencies": {
+    "eslint": "^8.33.0"
+  }
 }
