--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/package.json
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@trybe/eslint-config-frontend": "^1.8.3",
+    "eslint-config-trybe-frontend": "^1.7.0",
     "vite": "^4.1.1"
   },
   "type": "module",
