--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/package.json
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/package.json
@@ -5,18 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vite --open"
+    "dev": "vite --open",
+    "lint": "eslint ./src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@trybe/eslint-config-frontend": "^1.8.3",
-    "eslint-config-trybe-frontend": "^1.7.0",
     "vite": "^4.1.1"
   },
   "type": "module",
   "devDependencies": {
+    "@trybe/eslint-config-frontend": "^1.8.3",
     "eslint": "^8.33.0"
   }
 }
