build: eslint da trybe

--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/package.json
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/package.json
@@ -16,7 +16,6 @@
   },
   "type": "module",
   "devDependencies": {
-    "@trybe/eslint-config-frontend": "^1.8.3",
-    "eslint": "^8.33.0"
+    "@trybe/eslint-config-frontend": "^1.8.3"
   }
 }
