--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/super-heroes/package.json
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/super-heroes/package.json
@@ -13,5 +13,9 @@
   "type": "module",
   "dependencies": {
     "vite": "^4.1.1"
+  },
+  "devDependencies": {
+    "@trybe/eslint-config-frontend": "^1.8.3",
+    "eslint": "^8.34.0"
   }
 }
