--- a/2-front-end/7-gerenciamento-de-estado-com-redux/dia-2-usando-o-redux-no-react/my-app/package.json
+++ b/2-front-end/7-gerenciamento-de-estado-com-redux/dia-2-usando-o-redux-no-react/my-app/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
