--- a/2-front-end/9-context-api-e-react-hooks/dia-1-react-hooks-usestate-useeffect/tryber-forms/.eslintrc.json
+++ b/2-front-end/9-context-api-e-react-hooks/dia-1-react-hooks-usestate-useeffect/tryber-forms/.eslintrc.json
@@ -1,34 +1,3 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends" : "@trybe/eslint-config-frontend",
-    "overrides": [
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-        "indent": [
-            "error",
-            4
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ]
-    }
+    "extends" : "@trybe/eslint-config-frontend"
 }
