--- a/3-back-end/1-docker-utilizando-containers/dia-3-orquestrando-containers-com-docker-compose/exercise-2/docker-compose.yaml
+++ b/3-back-end/1-docker-utilizando-containers/dia-3-orquestrando-containers-com-docker-compose/exercise-2/docker-compose.yaml
@@ -3,5 +3,18 @@ version: '3'
 services:
   ghost:
     image: 'ghost:1-alpine'
+    restart: 'always'
     ports:
       - 2368:2368
+    environment:
+      database__client: mysql
+      database__connection__host: db
+      database__connection__user: root
+      database__connection__password: password
+      database__connection__database: ghost
+    depends_on:
+      - 'db'
+  db:
+    image: 'mysql:5.7.40'
+    environment:
+      MYSQL_ROOT_PASSWORD: password
