--- a/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-1-node-js-runtime-assincrono/my-scripts/package.json
+++ b/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-1-node-js-runtime-assincrono/my-scripts/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "bmi.js",
   "scripts": {
+    "bmi": "node bmi",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
