--- a/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-1-node-js-runtime-assincrono/my-scripts/package.json
+++ b/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-1-node-js-runtime-assincrono/my-scripts/package.json
@@ -9,5 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
