--- a/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-3-node-js-testes-de-integracao/cacau-trybe/package.json
+++ b/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-3-node-js-testes-de-integracao/cacau-trybe/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha tests/**/*.test.js --exit"
+    "test": "mocha tests/**/*.test.js --exit",
+    "start": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "chai": "4.3.4",
     "chai-http": "4.3.0",
     "mocha": "8.4.0",
+    "nodemon": "^2.0.22",
     "sinon": "11.1.1"
   },
   "dependencies": {
