--- a/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-4-node-js-express-e-middlewares/soccer-team-4-4/package.json
+++ b/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-4-node-js-express-e-middlewares/soccer-team-4-4/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.17.1"
+    "cors": "2.8.5",
+    "express": "4.17.1",
+    "morgan": "1.10.0"
   },
   "devDependencies": {
     "eslint": "6.8.0",
