--- a/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-4-node-js-express-e-middlewares/soccer-team-4-4/package.json
+++ b/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-4-node-js-express-e-middlewares/soccer-team-4-4/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "cors": "2.8.5",
     "express": "4.17.1",
+    "express-rate-limit": "6.7.0",
+    "helmet": "6.0.1",
     "morgan": "1.10.0"
   },
   "devDependencies": {
