--- a/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-4-node-js-express-e-middlewares/soccer-team-4-4/package.json
+++ b/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-4-node-js-express-e-middlewares/soccer-team-4-4/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "eslint": "6.8.0",
     "eslint-config-trybe-backend": "1.0.1",
+    "express-async-errors": "3.1.1",
     "nodemon": "2.0.15"
   }
 }
