:bricks: ci: create db on volumes

--- a/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-5-node-js-express-e-my-sql/trybecash-api/docker-compose.yaml
+++ b/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-5-node-js-express-e-my-sql/trybecash-api/docker-compose.yaml
@@ -1,26 +1,16 @@
 version: '3'
 services:
   node:
-    # Faz o docker construir (build) de uma imagem personalizada
-    # baseada no arquivo Dockerfile
     build:
       dockerfile: ./Dockerfile
       context: .
-    # Nome do container para facilitar execução
     container_name: trybecash_api
-    # Restarta a imagem caso algo a faça parar
     restart: always
-    # Diretório padrão de execução
     working_dir: /app
-    # Lista de volumes (diretórios) mapeados de fora para dentro do container
     volumes:
-      # Monta o diretório atual, com todos os dados da aplicação, dentro do diretório /app
       - ./:/app
     ports:
-      # Expõe a porta padrão da aplicação: altere aqui caso use outra porta
-      # na notação porta_de_fora:porta_de_dentro
       - 3000:3000
-    # Informa ao docker, para que o container node seja iniciado após o container database
     depends_on:
       - "database"
 
@@ -32,3 +22,5 @@ services:
       MYSQL_DATABASE: trybecashdb
     ports:
       - "33060:3306"
+    volumes:
+      - ./trybecash_script.sql:/docker-entrypoint-initdb.d/trybecash_script.sql
