--- a/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-5-node-js-express-e-my-sql/trybecash-api/package.json
+++ b/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-5-node-js-express-e-my-sql/trybecash-api/package.json
@@ -14,5 +14,9 @@
   "devDependencies": {
     "eslint": "6.8.0",
     "eslint-config-trybe-backend": "1.0.1"
+  },
+  "dependencies": {
+    "express": "4.17.1",
+    "mysql2": "2.3.3"
   }
 }
