--- a/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-5-node-js-express-e-my-sql/trybecash-api/package.json
+++ b/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-5-node-js-express-e-my-sql/trybecash-api/package.json
@@ -17,6 +17,7 @@
     "eslint": "6.8.0",
     "eslint-config-trybe-backend": "1.0.1",
     "mocha": "^10.0.0",
+    "nodemon": "^2.0.22",
     "sinon": "^14.0.0"
   },
   "dependencies": {
