--- a/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-5-node-js-express-e-my-sql/trybecash-api/docker-compose.yaml
+++ b/3-back-end/4-introducao-ao-desenvolvimento-web-com-node-js/dia-5-node-js-express-e-my-sql/trybecash-api/docker-compose.yaml
@@ -13,12 +13,28 @@ services:
       - 3000:3000
     depends_on:
       - "database"
+    environment:
+      # O valor dessa variável deve ser o nome do serviço do docker-compose
+      # que roda o mysql, neste caso database e não mais localhost.
+      - MYSQL_HOST=database
+      # A porta aqui é 3306 e não 33060 pois nesse caso estamos informando
+      # o valor de um container (node) para outro (database)
+      - MYSQL_PORT=3306
+      # Aqui é o valor do nome de usuário que por padrão é root.
+      - MYSQL_USER=${MYSQL_USER}
+      # o valor desta variável de ambiente ser igual ao valor da variável MYSQL_ROOT_PASSWORD definida no serviço do mysql
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+    # Pode usar o atributo env_file para especificar o caminho para 
+    # um arquivo que contém as variáveis de ambiente, nesse caso,
+    # o arquivo .env
+    env_file:
+      - .env
 
   database:
     image: mysql:8.0.29
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_DATABASE: trybecashdb
     ports:
       - "33060:3306"
