--- a/3-back-end/6-node-js-orm-e-autenticacao/dia-1-orm-interface-da-aplicacao-com-o-banco-de-dados/app-with-sequelize/package.json
+++ b/3-back-end/6-node-js-orm-e-autenticacao/dia-1-orm-interface-da-aplicacao-com-o-banco-de-dados/app-with-sequelize/package.json
@@ -2,18 +2,21 @@
   "name": "app-with-sequelize",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "4.17.3",
     "mysql2": "2.1.0",
     "sequelize": "6.3.4"
   },
   "devDependencies": {
+    "nodemon": "2.0.15",
     "sequelize-cli": "6.2.0"
   }
 }
