--- a/3-back-end/6-node-js-orm-e-autenticacao/dia-1-orm-interface-da-aplicacao-com-o-banco-de-dados/practice-exercises/package.json
+++ b/3-back-end/6-node-js-orm-e-autenticacao/dia-1-orm-interface-da-aplicacao-com-o-banco-de-dados/practice-exercises/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "4.17.1",
     "mysql2": "2.1.0",
     "sequelize": "6.3.4"
