--- a/3-back-end/6-node-js-orm-e-autenticacao/dia-1-orm-interface-da-aplicacao-com-o-banco-de-dados/practice-exercises/package.json
+++ b/3-back-end/6-node-js-orm-e-autenticacao/dia-1-orm-interface-da-aplicacao-com-o-banco-de-dados/practice-exercises/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":  "nodemon --inspect=0.0.0.0:9229 .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "4.17.1",
     "mysql2": "2.1.0",
+    "nodemon": "^2.0.22",
     "sequelize": "6.3.4"
   },
   "devDependencies": {
