--- a/3-back-end/6-node-js-orm-e-autenticacao/dia-1-orm-interface-da-aplicacao-com-o-banco-de-dados/practice-exercises/package.json
+++ b/3-back-end/6-node-js-orm-e-autenticacao/dia-1-orm-interface-da-aplicacao-com-o-banco-de-dados/practice-exercises/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":  "nodemon --inspect=0.0.0.0:9229 .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --inspect=0.0.0.0:9229 .",
+    "test": "mocha tests/**/*$name*.test.js --exit"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,9 @@
     "sequelize": "6.3.4"
   },
   "devDependencies": {
-    "sequelize-cli": "6.2.0"
+    "chai": "4.3.4",
+    "mocha": "10.0.0",
+    "sequelize-cli": "6.2.0",
+    "sequelize-test-helpers": "1.4.3"
   }
 }
