--- a/3-back-end/6-node-js-orm-e-autenticacao/dia-2-orm-associations-1-1-e-1-n/employees_project/package.json
+++ b/3-back-end/6-node-js-orm-e-autenticacao/dia-2-orm-associations-1-1-e-1-n/employees_project/package.json
@@ -1,4 +1,8 @@
 {
+  "main": "src/server.js",
+  "scripts": {
+    "dev": "nodemon src/server.js"
+  },
   "dependencies": {
     "express": "4.17.1",
     "mysql2": "2.1.0",
