--- a/3-back-end/6-node-js-orm-e-autenticacao/dia-4-jwt-json-web-token/hello-jwt/package.json
+++ b/3-back-end/6-node-js-orm-e-autenticacao/dia-4-jwt-json-web-token/hello-jwt/package.json
@@ -19,8 +19,10 @@
   },
   "dependencies": {
     "cors": "2.8.5",
+    "dotenv": "^16.3.1",
     "express": "4.17.1",
     "joi": "17.4.0",
+    "jsonwebtoken": "9.0.0",
     "mysql2": "2.2.5"
   }
 }
